--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,5 +5,6 @@
       {{hero.name}}
   </a>
 </div>
-
-<app-hero-search></app-hero-search>
+<div *ngIf="userService.userType!='type3'">
+  <app-hero-search></app-hero-search>
+</div>
