updated code for amazon demo page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!--
 <div style="position: absolute;">
   <input id="type1" type="radio" value="type1" name="userType" (change)="setUserType($event)" checked>
   <label for="type1">Type 1</label>
@@ -25,3 +26,5 @@
   });
 </script>
 </div>
+-->
+<router-outlet></router-outlet>
