--- a/src/app/amazon-demo-container/image-prioritize/image-prioritize.component.html
+++ b/src/app/amazon-demo-container/image-prioritize/image-prioritize.component.html
@@ -1,7 +1,7 @@
 
         <!-- Title -->
         <div class="row row-cols-1 title">
-            <div id="title" class="col mb-0">
+            <div id="title" class="mb-0">
                 <label for="title"><h4>Lenovo Ideapad Slim 3 10th Gen Intel Core i3 15.6" (39.62cm) FHD Thin & Light Laptop (8GB/256 GB SSD/UHD Graphics/Windows 10/MS Office/2 Year Warranty/Platinum Grey/1.7Kg), 81WB012DIN</h4></label>
             </div>
         </div>
