added additional information

--- a/src/app/amazon-demo-container/notification/notification.component.html
+++ b/src/app/amazon-demo-container/notification/notification.component.html
@@ -5,6 +5,8 @@
     <th>Desc</th>
     <th>Node</th>
     <th>Title</th>
+    <th>Time</th>
+    <Th>IP</Th>
     <th>Url</th>
     <th>Cookie</th>
     <th>Platform</th>
@@ -27,6 +29,12 @@
         </td>
         <td>
             {{notification.title}}
+        </td>
+        <td>
+            {{notification.time}}
+        </td>
+        <td>
+            {{notification.ipAddress}}
         </td>
         <td>
             {{notification.url}}
