--- a/src/app/amazon-demo-container/add-cart/add-cart.component.html
+++ b/src/app/amazon-demo-container/add-cart/add-cart.component.html
@@ -1,6 +1,11 @@
 
    
-        <div class="row">
+<input type="radio" id="type1" name="type" value="type1">
+<label for="html">Type 1</label>
+<input type="radio" id="type2" name="type" value="type2">
+<label for="css">Type 2</label>        
+
+<div class="row">
             <!-- Product Image -->
             <div class="col col-xl-6 carousel1_container">
                 <owl-carousel-o [options]="customOptions">
